# telegram-gif-archive-bot

./: .gitignore  CHANGELOG.md  stack.yaml  telegram-gif-archive-bot.cabal
app/: Main.hs
src/: .Monad.hs.swp
src/App/: Config.hs
src/App/AppM/: Database.hs  Logging.hs
src/Database/: .Types.hs.swp  Types.hs
src/Telegram/: Monad.hs
src/Telegram/Bot/: Auth.hs  Bot.hs
src/Telegram/Bot/Api/: Client.hs  Types.hs
