cabal-version:      2.4
name:               telegram-gif-archive-bot
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Enrico Bandiera
maintainer:         e.bandiera@teamsystem.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    ghc-options:
      -Wall
    exposed-modules:
      App.Config
      App.AppM
      App.AppM.Type
      App.AppM.Database
      App.AppM.Logging
      App.ReplyM
      Database.Types
      Logging.Logger
      Logging.Types
      Telegram.Bot.Api.Client
      Telegram.Bot.Api.Types
      Telegram.Bot.Auth
      Telegram.Bot.Bot
      Telegram.Monad
      --Utils.Aeson


    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
  build-depends:
    , aeson
    , base
    , base64-bytestring
    , bytestring
    , containers
    , data-default
    , data-flags
    , di
    , fast-logger
    , generic-lens
    , http-client
    , http-client-tls
    , http-types
    , iso8601-time
    , lens-aeson
    , microlens-platform
    , mtl
    , optparse-applicative
    , parsec
    , postgresql-simple
    , qm-interpolated-string
    , random
    , streaming
    , text
    , text-show
    , time
    , transformers
    , unliftio
    , uri-encode
    , uuid
    , warp
    , wreq

  hs-source-dirs:   src
  default-language: Haskell2010

executable telegram-gif-archive-bot
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base
      , telegram-gif-archive-bot
      , fast-logger
      , optparse-applicative
      , text
    hs-source-dirs:   app
    default-language: Haskell2010
